css/style.css
* {
    box-sizing: border-box;
}

body {
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    min-width: 100vw;
}

.container {
    display: flex;
    flex-direction: column;
    height: 600px;
    width: 500px;
    border: 1px solid black;
    padding: 10px;
    gap: 10px;
}

.display {
    flex: 1 1 0;
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
    font-size: 50px;
}

.delete-buttons {
    display: flex;
    height: 15%;
    gap: 10px;
}

.delete-buttons>button {
    flex: 1 1 calc(50% - 10px);
}

.button-pad {
    display: flex;
    flex-direction: column;
    flex: 2 1 auto;
    gap: 10px;
}

.button-row {
    display: flex;
    flex: 1 1 auto;
    gap: 10px;
}

.button-row>button {
    flex: 1 0 calc(100% / 4 - 10px);
}

button {
    font-size: 24px;
    padding: 0;
}

